# quantleet

./: .coverage-baseline.json  .gitignore  .jscpd.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-development-guide-ko.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  release.yaml
docs/: DESIGN.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  feedback-promotion-log.md
docs/design-docs/: agentic-quality-gates.md  architecture-governance.md  backtest-execution-semantics.md  core-beliefs.md  doc-gardening.md  golden-principles.md  index.md  order-domain-runtime-design.md  order-lifecycle-and-sizing-design.md  order-runtime-model-design.md  package-topology-and-naming.md  quantcraft-architecture.md  quantleet-architecture.md  trading-kernel-contract-draft-ko.md  trading-kernel-contract-draft.md  unified-strategy-runtime-design.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-11-backtest-runtime-hardening-implementation.md  index.md
docs/exec-plans/completed/: 2026-03-21-backtest-mvp-implementation.md  2026-03-22-harness-quality-improvement.md  2026-03-24-research-ergonomics-implementation.md  2026-03-25-implemented-scope-sync.md  2026-03-30-coverage-harness-implementation.md  2026-04-02-agent-harness-anti-gaming-improvement.md  2026-04-03-indicator-performance-optimization.md  2026-04-03-test-harness-stabilization.md  2026-04-08-ta-layer-refactor-implementation.md  index.md
docs/plans/: 2026-03-11-dev-tools-bootstrap.md  2026-03-13-binance-minimal-hardening.md  2026-03-13-binance-notebook-validation-design.md  2026-03-13-binance-notebook-validation.md  2026-03-13-binance-ohlcv-minimal-design.md  2026-03-13-binance-ohlcv-minimal.md  2026-03-13-ccxt-runtime-dependency-design.md  2026-03-13-ccxt-runtime-dependency.md  2026-03-15-cross-exchange-comparison-notebook-design.md  2026-03-15-cross-exchange-comparison-notebook-implementation.md  2026-03-15-exchange-object-ohlcv-design.md  2026-03-15-exchange-object-ohlcv-implementation.md  2026-03-15-generalized-ccxt-exchange-design.md  2026-03-15-generalized-ccxt-exchange-implementation.md  2026-03-18-agent-first-repository-setup-design.md  2026-03-18-agent-first-repository-setup.md  2026-03-18-test-taxonomy-and-layout-design.md  2026-03-18-test-taxonomy-and-layout.md  2026-03-26-data-ingestion-implementation.md  2026-03-27-ccxt-pagination-implementation.md  2026-03-28-trade-summary-semantics-implementation.md  2026-03-29-strategy-position-view-design.md  2026-03-29-strategy-position-view-implementation.md  2026-03-30-backtest-engine-design.md  2026-03-30-backtest-engine-implementation.md  2026-04-02-agent-harness-anti-gaming-design.md  2026-04-02-backtest-throughput-benchmark-design.md  2026-04-02-backtest-throughput-benchmark-implementation.md  2026-04-03-rsi-performance-gate-design.md  2026-04-03-rsi-performance-gate-implementation.md  2026-04-08-ta-layer-refactor-design.md  2026-04-10-backtest-runtime-hardening-design.md  2026-04-13-ce-workflow-migration-plan.md  2026-04-14-legacy-control-plane-final-retirement.md  2026-04-14-legacy-control-plane-retirement.md  2026-04-14-limit-regression-decision-record.md  2026-04-14-limit-strategy-regression-design.md  2026-04-15-backtest-semantics-conformance-implementation-plan.md  2026-04-15-backtest-semantics-doc-promotion-plan.md  2026-04-15-backtest-semantics-implementation-execution.md  (+145 more)
docs/plans/trials/: 2026-04-14-ce-authority-trial.md  README.md  TEMPLATE.md
docs/product-specs/: backtest-mvp.md  backtest-plotting-test-scenarios.md  backtest-plotting.md  backtest.md  data-ingestion.md  direct-backtest-class-config-api-test-scenarios.md  direct-backtest-class-config-api.md  index.md  live-trading.md  market-data.md  order-reservation.md  order-sizing.md  paper-trading.md  parameter-exploration-test-scenarios.md  parameter-exploration.md  public-beta-documentation.md  reporting-config-source-of-truth-test-scenarios.md  reporting-config-source-of-truth.md  research-ergonomics.md  stop-limit.md  strategy-configuration-contract-test-scenarios.md  strategy-configuration-contract.md  walk-forward-analysis-readiness.md  walk-forward-analysis-resume-test-scenarios.md  walk-forward-analysis-resume.md  walk-forward-analysis.md  wfa-prerequisite-roadmap.md
docs/references/: agent-harness-evidence.md  ai-native-repo-comparison.md  coverage-regression-gate-research.md  developer-tasks.md  index.md  openai-harness-engineering.md  research-ergonomics-quickstart.md  test-quality-evaluation-plan.md  test-quality-evaluation-report-2026-05-16.md  testing.md  tooling.md
docs/research/: 2026-03-23-python-quant-library-landscape.md  2026-04-03-rsi-performance-analysis.md  2026-04-19-order-domain-architecture-comparison.md  2026-04-20-order-lifecycle-and-sizing-comparison.md  2026-04-20-order-runtime-model-comparison.md  index.md
docs/research/libraries/: backtesting-py.md  backtrader.md  freqtrade.md  lumibot.md  nautilustrader.md  pybroker.md  vectorbt.md
docs/site/: examples.md  index.md  installation.md  quickstart.md
docs/site/concepts/: beta-scope.md
docs/site/getting-started/: index.md
docs/site/guides/: backtesting.md  data-sources.md  orders-and-sizing.md  parameter-exploration.md  strategy-authoring.md  walk-forward-analysis.md
notebooks/: backtest-plotting-real-data-example.ipynb  binance-spot-usdm-validation.ipynb  binance-usdm-rsi-2024-ad-hoc.ipynb  research-ergonomics-quickstart.ipynb  spot-cross-exchange-price-comparison.ipynb
scripts/: __init__.py  check_architecture.py  check_docs.py  check_mutation_score.py  coverage_baseline.py  coverage_check.py  live_smoke.py  notebook_validate.py  repo_check.py  update_quality_score.py
src/quantcraft/: __init__.py  _notebook_tools.py  _repo_tools.py  exchange.py
src/quantleet/: _repo_tools.py
tests/: __init__.py  conftest.py  support.py  support_backtest.py  support_ccxt.py  support_indicator_runtime.py
tests/perf/: test_backtest_plotting_scale.py  test_rsi_backtest_benchmark.py
(+233 files in other folders)
