[project]
name = "quantleet"
version = "0.1.0b1"
description = "Single-symbol Python backtesting and quant research tooling"
readme = "README.md"
authors = [
    { name = "nbsp1221", email = "nbsp1221@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["quant", "backtesting", "research", "trading", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "ccxt>=4.5.43",
    "matplotlib>=3.10.8",
    "ta-lib>=0.6.8",
]

[project.urls]
Homepage = "https://github.com/nbsp1221/quantleet"
Repository = "https://github.com/nbsp1221/quantleet"
Issues = "https://github.com/nbsp1221/quantleet/issues"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "diff-cover>=10.2.0",
    "ipykernel>=7.2.0",
    "mutmut>=3.5.0",
    "mypy>=1.19.1",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.2",
    "ruff>=0.15.5",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.poe]
executor = "uv"

[tool.poe.tasks]
lint = { cmd = "ruff check .", help = "Run Ruff lint checks" }
format = { cmd = "ruff format .", help = "Format the repository with Ruff" }
"format-check" = { cmd = "ruff format --check .", help = "Check repository formatting with Ruff" }
"perf-check" = { cmd = "pytest tests/perf -q -x --run-perf", help = "Run the canonical performance regression gate" }
"check-runtime" = { sequence = ["check", "perf-check"], help = "Run the stronger explicit check lane for runtime-sensitive backtest or research changes" }
typecheck = { cmd = "mypy src", help = "Run mypy against the package source" }
test = { cmd = "pytest -q", help = "Run the default test pass/fail lane without coverage" }
test-unit = { cmd = "pytest tests/unit -q", help = "Run unit tests" }
test-integration = { cmd = "pytest tests/integration -q", help = "Run integration tests" }
test-structure = { cmd = "pytest tests/structure -q", help = "Run repository structure tests" }
test-smoke = { cmd = "pytest tests/smoke/local -q", help = "Run local smoke tests" }
test-live = { cmd = "pytest tests/smoke/live -q", help = "Run live smoke tests explicitly" }
coverage = { sequence = [{ cmd = "coverage run -m pytest -q" }, { cmd = "coverage report -m" }], help = "Rerun tests with coverage.py and enforce the coverage gate" }
"coverage-diff" = { sequence = [{ cmd = "coverage erase" }, { cmd = "coverage run -m pytest -q" }, { cmd = "coverage xml -o coverage.xml --fail-under=0" }, { cmd = "diff-cover coverage.xml --compare-branch HEAD --include-untracked --fail-under 80" }], help = "Rerun tests and enforce changed-lines coverage" }
"coverage-baseline" = { cmd = "uv run python scripts/coverage_baseline.py check --baseline .coverage-baseline.json --allowed-drop 0.25 --current-json coverage-baseline-current.json", help = "Fail on coverage regression and automatically raise the committed baseline on improvement" }
"coverage-baseline-update" = { cmd = "uv run python scripts/coverage_baseline.py update --baseline .coverage-baseline.json --current-json coverage-baseline-current.json", help = "Bootstrap or explicitly raise the committed coverage baseline" }
"coverage-gates" = { sequence = [{ cmd = "coverage erase" }, { cmd = "coverage run -m pytest -q" }, { cmd = "coverage report -m" }, { cmd = "coverage xml -o coverage.xml --fail-under=0" }, { cmd = "diff-cover coverage.xml --compare-branch HEAD --include-untracked --fail-under 80" }, "coverage-baseline"], help = "Run tests once and enforce full-project, changed-lines, and regression coverage gates" }
"mutation-trading" = { sequence = [{ cmd = "mutmut run --max-children 4" }, { cmd = "mutmut results" }], help = "Run targeted mutation testing for the trading kernel" }
build = { cmd = "uv build", help = "Build the package artifacts" }
"twine-check" = { cmd = "uvx twine check --strict dist/*.whl dist/*.tar.gz", help = "Check built package artifacts with Twine" }
"repo-check" = { cmd = "uv run python scripts/repo_check.py", help = "Run repository harness checks" }
"notebook-validate" = { cmd = "uv run python scripts/notebook_validate.py", help = "Execute tracked notebooks" }
"live-smoke" = { cmd = "uv run python scripts/live_smoke.py", help = "Run the live smoke harness script" }
check = { sequence = ["format-check", "lint", "typecheck", "coverage-gates", "build", "twine-check", "repo-check", "notebook-validate"], help = "Run the default local quality gate" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "unit: deterministic isolated behavior tests",
    "integration: deterministic cross-module and command-surface tests",
    "structure: repository structure and architecture rule tests",
    "smoke: minimal sanity checks",
    "live: external-network or real-service smoke tests",
    "slow: intentionally slower verification paths",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["quantleet"]

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["talib", "talib.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "RUF100", "PT", "DTZ"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["quantleet"]

[tool.mutmut]
paths_to_mutate = ["src/quantleet/trading"]
pytest_add_cli_args_test_selection = ["tests/unit/trading"]
mutate_only_covered_lines = true
